--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-validator": "^6.12.0",
     "moment": "^2.29.1",
     "mongodb": "^3.6.10",
     "mongoose": "^5.13.2",
